style.css
/* General */
body {
	padding-top: 4.5rem;
	text-align: left;
	font-family: Times New Roman, Times, serif;
	font-size: 16px;
	color: #000000;
}

p {
	text-align: left;
	text-align: justify;
}

a {
    color: #6c3483;
}

a:hover {
    color: #c39bd3 ;
}

hr {
	border: 0; 
	height: 1px; 
	background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
}

/*Bootstrap Overrides*/

/*.bg-dark {
    background-color: #633974  !important;
}*/

.navbar {
    padding: 0rem 1.5rem;
}

.navbar-nav {
    float:none;
    margin:0 auto;
    display: block;
    text-align: center;
}

.navbar-nav > li {
    display: inline-block;
    float:none;
    padding-left: 1.5rem;
}

.navbar-dark .navbar-nav .active > .nav-link, .navbar-dark .navbar-nav .nav-link.active, .navbar-dark .navbar-nav .nav-link.show, .navbar-dark .navbar-nav .show > .nav-link {
    background-color: #c39bd3; 
}

/* Custom */
#round {
	border-radius: 50%;
	overflow: hidden;
	width: 250px;
	height: 250px;
}

#round img {
    display: block;
    height: 100%;
    width: 100%; 
    min-width: 100%;
	min-height: 100%;
}

#social-media img {
    width: 40px;
    height: 40px;
    margin-right: 10px;
}

#thmb img {
    width: 150px;
    height: 150px;
}

